@@ -35,6 +35,7 @@ v.0.5dev (ongoing development)
  * t6963: Size has now to be configured in pixels instead of characters
  + Build system: --enable-extra-charmaps option adds language specific charmaps
  * imonlcd: Fix spinning of disc icon (E. Pooch)
+ * SureElec: Change port initialization (SF 3212891)
 
 v0.5.4
  * Update driver includes and LDFLAGS (fixed glk and bayrad binding error)
